// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare_export.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare export default 5;

=====================================output=====================================
declare export default 5

================================================================================
`;

exports[`declare_export.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare export default 5;

=====================================output=====================================
declare export default 5;

================================================================================
`;

exports[`declare_module.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {}

=====================================output=====================================
declare module "foo" {
  declare var bar: string
}

declare module baz {
}

================================================================================
`;

exports[`declare_module.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {}

=====================================output=====================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {
}

================================================================================
`;

exports[`declare_namespace.js [babel-flow] format 1`] = `
"Unexpected token (1:9)
> 1 | declare namespace foo {
    |         ^
  2 |   declare var bar: string;
  3 | }
  4 |
Cause: Unexpected token (1:8)"
`;

exports[`declare_namespace.js - {"semi":false} [babel-flow] format 1`] = `
"Unexpected token (1:9)
> 1 | declare namespace foo {
    |         ^
  2 |   declare var bar: string;
  3 | }
  4 |
Cause: Unexpected token (1:8)"
`;

exports[`declare_namespace.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare namespace foo {
  declare var bar: string;
}

=====================================output=====================================
declare namespace foo {
  declare var bar: string
}

================================================================================
`;

exports[`declare_namespace.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare namespace foo {
  declare var bar: string;
}

=====================================output=====================================
declare namespace foo {
  declare var bar: string;
}

================================================================================
`;

exports[`declare_type.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare type A = string;

=====================================output=====================================
declare type A = string

================================================================================
`;

exports[`declare_type.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare type A = string;

=====================================output=====================================
declare type A = string;

================================================================================
`;

exports[`declare_var.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare var bool: React$PropType$Primitive<boolean>;

=====================================output=====================================
declare var bool: React$PropType$Primitive<boolean>

================================================================================
`;

exports[`declare_var.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare var bool: React$PropType$Primitive<boolean>;

=====================================output=====================================
declare var bool: React$PropType$Primitive<boolean>;

================================================================================
`;

exports[`long.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
export type AdamPlacementValidationSingleErrorKey =
  'SOME_FANCY_TARGETS.GLOBAL_TARGET';

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 = SomeReallyLongLongLongLongLongLongIdentifier;

=====================================output=====================================
export type AdamPlacementValidationSingleErrorKey =
  "SOME_FANCY_TARGETS.GLOBAL_TARGET"

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  true

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  null

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 =
  SomeReallyLongLongLongLongLongLongIdentifier

================================================================================
`;

exports[`long.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type AdamPlacementValidationSingleErrorKey =
  'SOME_FANCY_TARGETS.GLOBAL_TARGET';

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 = SomeReallyLongLongLongLongLongLongIdentifier;

=====================================output=====================================
export type AdamPlacementValidationSingleErrorKey =
  "SOME_FANCY_TARGETS.GLOBAL_TARGET";

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 =
  SomeReallyLongLongLongLongLongLongIdentifier;

================================================================================
`;

exports[`opaque.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union =
 | {type: "A"}
 | {type: "B"};
opaque type overloads =
  & ((x: string) => number)
  & ((x: number) => string);

=====================================output=====================================
declare export opaque type Foo
declare export opaque type Bar<T>
declare export opaque type Baz: Foo
declare export opaque type Foo1<T>: Bar<T>
declare export opaque type Foo2<T>: Bar
declare export opaque type Foo3: Bar<T>
opaque type ID = string
opaque type Foo4<T> = Bar<T>
opaque type Maybe<T> = _Maybe<T, *>
export opaque type Foo5 = number
opaque type union = { type: "A" } | { type: "B" }
opaque type overloads = ((x: string) => number) & ((x: number) => string)

================================================================================
`;

exports[`opaque.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union =
 | {type: "A"}
 | {type: "B"};
opaque type overloads =
  & ((x: string) => number)
  & ((x: number) => string);

=====================================output=====================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union = { type: "A" } | { type: "B" };
opaque type overloads = ((x: string) => number) & ((x: number) => string);

================================================================================
`;
